# smartappserver

./: ProjectHome.md  README.md
cdataassigner-0.1/: Makefile  Makefile.am  Makefile.in  config.h  config.h.in  config.status  configure  configure.in  libtool  n_lib
cdataassigner-0.1/.deps/: c_array.Plo  c_bhtree.Plo  c_chain.Plo  c_debug.Plo  c_hash.Plo  c_mem.Plo  c_prtree.Plo  c_stack.Plo  c_string.Plo
cdataassigner-0.1/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
cdataassigner-0.1/inc/: c_algorithmic.h  c_array.h  c_bhtree.h  c_chain.h  c_debug.h  c_define.h  c_hash.h  c_mem.h  c_prtree.h  c_stack.h  c_string.h
cdataassigner-0.1/src/: c_array.c  c_bhtree.c  c_chain.c  c_debug.c  c_hash.c  c_mem.c  c_prtree.c  c_stack.c  c_string.c
dboperater-0.1/: Makefile  Makefile.am  Makefile.in  config.h  config.h.in  config.status  configure  configure.in  libtool
dboperater-0.1/.deps/: dbo_base.Plo
debug/: ksearch  ksearch.c  testxml  xml  xml.c  xmloutput
interface/: done  index.html  script.js  script.js.bak  script.js.new  style.css
smartappserver-0.1/: Makefile.am  Makefile.in  config.h.in  configure  configure.in
smartappserver-0.1/inc/: cgi_funs.h  manage_funs.h  manage_responder.h
smartappserver-0.1/src/: cgi_funs.c  manage_funs.c  manage_responder.c
xmloperater-0.1/: .directory  Makefile  Makefile.am  Makefile.in  config.h  config.h.in  config.status  configure  configure.in  libtool
xmloperater-0.1/.deps/: xmlo.Plo
xmloperater-0.1/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
xmloperater-0.1/inc/: xmlo.h
xmloperater-0.1/src/: xmlo.c
(+10 files in other folders)
